<resources>
    <string name="app_name">GymTrack</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="string_settings">Settings</string>

    <string name="press_again_exit">tap again to close the app</string>


    <!-- Login -->
    <string name="str_login_title">LOG IN</string>
    <string name="str_email_hint">EMAIL</string>
    <string name="str_password_hint">PASSWORD</string>
    <string name="str_login">LOGIN</string>
    <string name="str_signup">SIGN UP</string>
    <string name="str_forgot_password1">Forgot Password?</string>
    <string name="str_forgot_password2">Reset Password</string>
    <string name="str_reset_password">Do you want to reset password now?</string>

    <!-- SignUp -->
    <string name="str_signup_title">SIGN UP</string>
    <string name="str_username_hint">USER NAME</string>
    <string name="str_goto_login1">Already have an account?</string>
    <string name="str_goto_login2">Sign In</string>


    <!-- MainActivity string -->
    <string name="str_discover">Discover</string>
    <string name="str_workout_log">Workout Log</string>
    <string name="str_profile">Profile</string>
    <string name="str_logout">Logout</string>
    <string name="string_log_out">Do you want to sign out now?</string>
    <string name="str_save_account">SAVE ACCOUNT</string>

    <!-- Discover fragment -->
    <string name="permission_denied">Permission denied.</string>

    <!-- Messages -->
    <string name="msg_network_connection_error">Please check your network connection.</string>

    <!-- General string -->
    <string name="Error">Error</string>
    <string name="Warning">Warning</string>
    <string name="Success">Success</string>
    <string name="CONFIRM">Confirm</string>
    <string name="OK">OK</string>
    <string name="CANCEL">Cancel</string>
    <string name="ACCEPT">Accept</string>
</resources>
