<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:fitsSystemWindows="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <android.support.design.widget.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/AppTheme.AppBarOverlay"
            app:elevation="0dp">

            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="?attr/colorPrimary"
                app:popupTheme="@style/AppTheme.PopupOverlay">

                <TextView
                    android:id="@+id/toolbar_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/str_login_title"
                    android:textColor="@color/text_title_color"
                    android:textSize="@dimen/textsize_header" />
            </android.support.v7.widget.Toolbar>
        </android.support.design.widget.AppBarLayout>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="@dimen/avatar_size"
                    android:layout_height="@dimen/avatar_size"
                    android:layout_gravity="center_horizontal"
                    android:layout_margin="30dp"
                    android:adjustViewBounds="true"
                    android:scaleType="fitCenter"
                    android:src="@mipmap/app_icon" />

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingLeft="@dimen/activity_horizontal_margin"
                    android:paddingRight="@dimen/activity_horizontal_margin"
                    android:theme="@style/CommonTextLabel">

                    <AutoCompleteTextView
                        android:id="@+id/edt_email"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/str_email_hint"
                        android:imeOptions="actionNext"
                        android:inputType="textEmailAddress"
                        android:textColor="@color/text_normal_color" />
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:paddingLeft="@dimen/activity_horizontal_margin"
                    android:paddingRight="@dimen/activity_horizontal_margin"
                    android:theme="@style/CommonTextLabel">

                    <AutoCompleteTextView
                        android:id="@+id/edt_password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/str_password_hint"
                        android:imeOptions="actionDone"
                        android:inputType="textPassword"
                        android:textColor="@color/text_normal_color" />
                </android.support.design.widget.TextInputLayout>

                <Button
                    android:id="@+id/btn_login"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/activity_horizontal_margin"
                    android:layout_marginRight="@dimen/activity_horizontal_margin"
                    android:layout_marginTop="20dp"
                    android:background="@drawable/round_rect_solid_orange"
                    android:text="@string/str_login"
                    android:textColor="@color/white"
                    android:textSize="@dimen/button_text_size" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/activity_horizontal_margin"
                    android:layout_marginRight="@dimen/activity_horizontal_margin"
                    android:layout_marginTop="20dp"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <View
                        android:layout_width="60dp"
                        android:layout_height="1dp"
                        android:background="@color/text_light_color" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="20dp"
                        android:layout_marginRight="20dp"
                        android:text="or"
                        android:textColor="@color/text_normal_color"
                        android:textSize="@dimen/text_size_normal" />

                    <View
                        android:layout_width="60dp"
                        android:layout_height="1dp"
                        android:background="@color/text_light_color" />
                </LinearLayout>

                <Button
                    android:id="@+id/btn_signup"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/activity_horizontal_margin"
                    android:layout_marginRight="@dimen/activity_horizontal_margin"
                    android:layout_marginTop="20dp"
                    android:background="@drawable/round_rect_solid_indigo"
                    android:text="@string/str_signup"
                    android:textColor="@color/white"
                    android:textSize="@dimen/button_text_size" />

            </LinearLayout>
        </ScrollView>

        <View
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <LinearLayout
            android:id="@+id/btn_forgot"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="20dp"
            android:layout_marginTop="20dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/str_forgot_password1"
                android:textColor="@color/text_normal_color"
                android:textSize="@dimen/text_size_normal" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:text="@string/str_forgot_password2"
                android:textColor="@color/colorPrimary_orange"
                android:textSize="@dimen/text_size_normal" />
        </LinearLayout>

    </LinearLayout>
</android.support.design.widget.CoordinatorLayout>