<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <com.sae.raz.ui.view.ProfileAvatarView
                android:id="@+id/img_user_avatar"
                android:layout_width="@dimen/avatar_size"
                android:layout_height="@dimen/avatar_size"
                android:layout_gravity="center_horizontal"
                android:layout_margin="30dp"/>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:theme="@style/CommonTextLabel">

                <AutoCompleteTextView
                    android:id="@+id/edt_username"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/str_username_hint"
                    android:inputType="textCapSentences"
                    android:imeOptions="actionNext"
                    android:textColor="@color/text_normal_color"/>
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:theme="@style/CommonTextLabel">

                <AutoCompleteTextView
                    android:id="@+id/edt_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/str_email_hint"
                    android:inputType="textEmailAddress"
                    android:imeOptions="actionNext"
                    android:textColor="@color/text_normal_color"/>
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:layout_marginTop="10dp"
                android:theme="@style/CommonTextLabel">

                <AutoCompleteTextView
                    android:id="@+id/edt_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/str_password_hint"
                    android:inputType="textPassword"
                    android:imeOptions="actionDone"
                    android:textColor="@color/text_normal_color" />
            </android.support.design.widget.TextInputLayout>
        </LinearLayout>
    </ScrollView>

    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <Button
        android:id="@+id/btn_save"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:text="@string/str_save_account"
        android:textColor="@color/white"
        android:textSize="@dimen/button_text_size"
        android:background="@drawable/round_rect_solid_orange"/>
</LinearLayout>