<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:fitsSystemWindows="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <android.support.design.widget.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/AppTheme.AppBarOverlay"
            app:elevation="0dp">

            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="?attr/colorPrimary"
                app:popupTheme="@style/AppTheme.PopupOverlay">

                <TextView
                    android:id="@+id/toolbar_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/str_signup"
                    android:textColor="@color/text_title_color"
                    android:textSize="@dimen/textsize_header" />
            </android.support.v7.widget.Toolbar>
        </android.support.design.widget.AppBarLayout>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <com.sae.raz.ui.view.ProfileAvatarView
                    android:id="@+id/img_user_avatar"
                    android:layout_width="@dimen/avatar_size"
                    android:layout_height="@dimen/avatar_size"
                    android:layout_gravity="center_horizontal"
                    android:layout_margin="30dp"/>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingLeft="@dimen/activity_horizontal_margin"
                    android:paddingRight="@dimen/activity_horizontal_margin"
                    android:theme="@style/CommonTextLabel">

                    <AutoCompleteTextView
                        android:id="@+id/edt_username"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/str_username_hint"
                        android:inputType="textCapSentences"
                        android:imeOptions="actionNext"
                        android:textColor="@color/text_normal_color"/>
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:paddingLeft="@dimen/activity_horizontal_margin"
                    android:paddingRight="@dimen/activity_horizontal_margin"
                    android:theme="@style/CommonTextLabel">

                    <AutoCompleteTextView
                        android:id="@+id/edt_email"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/str_email_hint"
                        android:inputType="textEmailAddress"
                        android:imeOptions="actionNext"
                        android:textColor="@color/text_normal_color"/>
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingLeft="@dimen/activity_horizontal_margin"
                    android:paddingRight="@dimen/activity_horizontal_margin"
                    android:layout_marginTop="10dp"
                    android:theme="@style/CommonTextLabel">

                    <AutoCompleteTextView
                        android:id="@+id/edt_password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/str_password_hint"
                        android:inputType="textPassword"
                        android:imeOptions="actionDone"
                        android:textColor="@color/text_normal_color" />
                </android.support.design.widget.TextInputLayout>

                <Button
                    android:id="@+id/btn_signup"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/activity_horizontal_margin"
                    android:layout_marginRight="@dimen/activity_horizontal_margin"
                    android:layout_marginTop="20dp"
                    android:text="@string/str_signup"
                    android:textColor="@color/white"
                    android:textSize="@dimen/button_text_size"
                    android:background="@drawable/round_rect_solid_orange"/>

            </LinearLayout>
        </ScrollView>

        <View
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <LinearLayout
            android:id="@+id/btn_to_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/str_goto_login1"
                android:textColor="@color/text_normal_color"
                android:textSize="@dimen/text_size_normal" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:text="@string/str_goto_login2"
                android:textColor="@color/colorPrimary_orange"
                android:textSize="@dimen/text_size_normal" />
        </LinearLayout>
    </LinearLayout>
</android.support.design.widget.CoordinatorLayout>